# gUse

./: CMakeLists.txt  gLog.h
Inc/: gLog.h
gAlg/: CMakeLists.txt  Defines.h  Vector3f.h
gAlg/Inc/: Vector2f.h  dArray.h  gAlg.h  gArray.h  gArray.inc  gCircularBuffer.h  gCircularBuffer.inc  gList.h  gList.inc  gTable.h  gTable.inc
gAlg/Src/: Vector2f.cpp  Vector3f.cpp  dArray.c  gAlg.c  gAlgTests.c  gArray.c  gCircularBuffer.c  gList.c  gTable.c  meson.build
gAlg/src/: Vector2f.cpp  Vector3f.cpp
gDef/Inc/: gDef.h
gLog/: CMakeLists.txt
gLog/Inc/: gLog.h
gLog/Src/: gLog.c
gReg/: CMakeLists.txt  gReg.h  main.cpp  test.greg
gReg/Src/: Entry.h  FileReader.cpp  FileReader.h  Processor.cpp  Processor.h  gReg.cpp
gStr/: CMakeLists.txt
gStr/Inc/: gStr.h  gString.h
gStr/Src/: GString.c  GString.cpp  GString.h  gString.c  gStringTests.c
